Corrected button formatting (alignment)

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -255,9 +255,10 @@ li a:hover {
 }
 
 .other-recipes button {
-    margin-bottom: 15px;
-    margin-right: 10px;
+    margin: 0px 15px 15px;
 }
+
+
 
 #other-recipe-links {
     margin-bottom: 1rem;
